# ejdb2rs

./: .gitmodules  Cargo.toml
ejdb-sys/: Cargo.toml  build.rs
src/: ejdb.rs  ejdbquery.rs  lib.rs  main.rs
