[package]
name = "ejdb2rs"
version = "0.0.6"
authors = ["Shi Yan <billconan@gmail.com>"]
description = "Binding for EJDB2, a single file embedded no-sql database"
repository = "https://github.com/shi-yan/ejdb2rs"
documentation = "https://github.com/shi-yan/ejdb2rs"
readme = "README.md"
keywords = ["ejdb2", "database", "json", "bson", "ffi"]
license = "MIT"
[badges]
maintenance = { status = "experimental" }

[lib]
name = "ejdb2"

[dependencies]
ejdb2-sys = {path="./ejdb-sys"}
serde_json = "1.0"
bson = "2.5.0"
